RESOLVED FIXED145642
Latching algorithm in findEnclosingOverflowScroll is broken
https://bugs.webkit.org/show_bug.cgi?id=145642
Summary Latching algorithm in findEnclosingOverflowScroll is broken
Brent Fulgham
Reported 2015-06-04 09:35:44 PDT
I discovered this problem while debugging Bug 145637. The logic in findEnclosingOverflowScroll uses the RenderBox "canBeScrolledAndHasScrollableArea" to identify the nearest enclosing element that can be scrolled. However, this method considers horizontal and vertical scrolling as equally relevant. This is a problem when we want to perform a vertical scroll, but the element underneath the mouse pointer can only be scrolled in a horizontal direction. When we have this scenario, the latching logic chooses the horizontally scrollable region and attempts to latch to it. When it discovers that it cannot be scrolled in the user's gesture direction, it gives up and passes control to the next enclosing latching context. When we are working on a single page, this means the document body, and things generally work as the user expects. But when we have nested iframes, this causes us to pop up to the enclosing iframe, which looks wrong to the user. The test case I added in Bug 145637 highlights this problem if you modify the <img> style to remove the "max-width:100%" in 'inner_content.html'. I think the right fix here is to modify 'findEnclosingOverflowScroll' so that it takes the gesture's dominant direction into account.
Attachments
Patch (5.37 KB, patch)
2015-06-04 11:23 PDT, Brent Fulgham
no flags
Patch (4.62 KB, patch)
2015-06-04 11:36 PDT, Brent Fulgham
no flags
Patch (5.75 KB, patch)
2015-06-04 17:59 PDT, Brent Fulgham
no flags
Patch (5.83 KB, patch)
2015-06-04 18:21 PDT, Brent Fulgham
simon.fraser: review+
Radar WebKit Bug Importer
Comment 1 2015-06-04 09:36:10 PDT
Brent Fulgham
Comment 2 2015-06-04 11:23:07 PDT
Simon Fraser (smfr)
Comment 3 2015-06-04 11:30:11 PDT
Comment on attachment 254281 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=254281&action=review > Source/WebCore/page/mac/EventHandlerMac.mm:795 > + if ((verticalScroll && box->hasScrollableOverflowY()) || (!verticalScroll && box->hasScrollableOverflowX())) > + return candidate; I'm not sure I like the idea of adding "predominantly vertical" logic here. The event could have non-zero X delta, and box->hasScrollableOverflowX() could be true, but we would not return that box as a candidate.
Brent Fulgham
Comment 4 2015-06-04 11:31:43 PDT
(In reply to comment #3) > Comment on attachment 254281 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=254281&action=review > > > Source/WebCore/page/mac/EventHandlerMac.mm:795 > > + if ((verticalScroll && box->hasScrollableOverflowY()) || (!verticalScroll && box->hasScrollableOverflowX())) > > + return candidate; > > I'm not sure I like the idea of adding "predominantly vertical" logic here. > The event could have non-zero X delta, and box->hasScrollableOverflowX() > could be true, but we would not return that box as a candidate. Ah! Good point. Maybe something like "deltaX && box->hasScrollableOverflowX() || deltaY && box->hasScrollableOverflowY()"
Brent Fulgham
Comment 5 2015-06-04 11:36:35 PDT
Brent Fulgham
Comment 6 2015-06-04 11:56:07 PDT
Alexey Proskuryakov
Comment 7 2015-06-04 14:02:32 PDT
This broke platform/mac-wk2/tiled-drawing/scrolling/fast-scroll-iframe-latched-select.html
Said Abou-Hallawa
Comment 8 2015-06-04 14:08:22 PDT
@@ -8,7 +8,7 @@ TEST COMPLETE PASS Page did not receive wheel events. -PASS IFrame did not receive wheel events. +FAIL IFrame consumed wheel events. PASS Select consumed wheel events. PASS successfullyParsed is true Rolling out.
WebKit Commit Bot
Comment 9 2015-06-04 14:09:02 PDT
Re-opened since this is blocked by bug 145655
Alexey Proskuryakov
Comment 10 2015-06-04 16:15:50 PDT
Rolling out r185211 too (which just added tests that now fail).
Brent Fulgham
Comment 11 2015-06-04 17:54:35 PDT
(In reply to comment #7) > This broke > platform/mac-wk2/tiled-drawing/scrolling/fast-scroll-iframe-latched-select. > html Ah! Indeed it does. The <select> case doesn't work the same way because it doesn't treat its scrollable area as overflow. So the "scrollsOverflowY()" returns false for <select>, even though it does satisfy "canBeScrolledAndHasScrollableArea".
Brent Fulgham
Comment 12 2015-06-04 17:59:43 PDT
Brent Fulgham
Comment 13 2015-06-04 18:21:42 PDT
Simon Fraser (smfr)
Comment 14 2015-06-04 18:25:20 PDT
Comment on attachment 254325 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=254325&action=review > Source/WebCore/page/mac/EventHandlerMac.mm:782 > +static ContainerNode* findEnclosingOverflowScrollForDominantDirection(ContainerNode* node, float deltaX, float deltaY) This isn't really "dominant direction" any more.
Brent Fulgham
Comment 15 2015-06-04 18:36:04 PDT
Note You need to log in before you can comment on or make changes to this bug.