Latching algorithm in findEnclosingOverflowScroll is broken https://bugs.webkit.org/show_bug.cgi?id=145642 <rdar://problem/21242308>

Reviewed by Simon Fraser.

Source/WebCore:

Test: platform/mac-wk2/tiled-drawing/scrolling/iframe_in_iframe.html

* page/mac/EventHandlerMac.mm:
(WebCore::findEnclosingOverflowScrollForDominantDirection): Renamed from
'findEnclosingOverflowScroll'. Only identify element as our overflow
scroll element if it can be scrolled in either axis of the gesture's
motion.
(WebCore::scrolledToEdgeInDominantDirection): Renamed.
(WebCore::EventHandler::platformPrepareForWheelEvents): Use new function
name, and pass horizontal and vertical deltas.
(WebCore::findEnclosingOverflowScroll): Deleted.

LayoutTests:

Revise the new latching test to remove the image "max-width: 100%" style, which was
preventing this example from having a horizontal scrollable region at the top of the
file.

It still correctly tests the subpixel bug from Bug 145637.

* platform/mac-wk2/tiled-drawing/scrolling/resources/inner_content.html: Remove width
adjustment on image.


Canonical link: https://commits.webkit.org/163689@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185208 268f45cc-cd09-0410-ab3c-d52691b4dbfc